For 1.21.1
	- FaceSets with Color node, not taking material properties correctly (especially transparency)

	- FaceSets, with RGB Color node, keep track of associated material transparency, and work through
	  color node changes.

	- removal of temporary files - code has been reworked, as some temporary files (specific:
	  files retrieved by wget or curl) were not removed.

	- initial work on CubeMapTextures.

	- GeoPositionInterpolator - output value not translated to local spatial units. (fixed)

	- EAI/SAI - PROTO expansion getField calls now work as expected.

	- XML-formatted X3D - PROTO and EXTERNPROTO field expansion work.

	- Shaders - only compile if OpenGL 2.0 or above is installed. Will work on OpenGL versions with
	  shader ARB system call names.

	- CFuncs/sounds.h - include unistd.h on Linux machines.

	- Macros to help "set" SF fields get used, when the equivalent "non set_" field is used.
	  eg, "set_orientation" inputOnly field in GeoViewpoint, when we have an initializeOnly "orientation" field.
	  Should rework all other nodes to use these macros. NOTE: MF fields are handled by the macro
	  EVIN_AND_FIELD_SAME.

For 1.21.0
	- VRMLNodes.pm - IndexedTriangle nodes; with increased checking, some fields were marked
	  "inputOnly" when they should have been "inputOutput" which gave routing warnings.

	- Billboard had some inconsistent rendering problems introduced in 1.20.6. Reverted
	  to older code.

	- Collision, support for both "collide" (vrml) "enabled" (x3d) fields verified.
	
	- Occlusionculling - when failed, textures not displayed, due to an optimization
	  for the texture loading scheduling algorithm.

	- start of ComposedShader and ShaderPart support.

	- Background - textures now working again, problem related to new scenegraph
	  structure resolved.

	- Background - provided more of a separation bewteen ground and sky backgrounds,
	  as it was possible, depending on z buffer depth, to have z-fighting going on.
